# Popper-Conector

./: Hardware specs  LICENSE  README.md  Roasting  setup
setup/: README.md
setup/computer-side/: README.md  popper-v1-phase-11-artisan-pid-visual-1hz-hotspot.aset
setup/pi-side-code/: .gitignore  README.md
setup/pi-side-code/config/: defaults.json
setup/pi-side-code/pi/: pyproject.toml
setup/pi-side-code/pi/src/roastpi/: __init__.py  app.py  config.py  heat.py  logging_setup.py  protocol.py  service.py  state.py  websocket_server.py
setup/pi-side-code/pi/src/roastpi/hardware/: __init__.py  dac.py  fake.py  real.py  thermocouple.py
setup/pi-side-code/systemd/: roastpi.service
setup/pi-side-code/tools/: read_thermocouple.py  run_real_server.py  start_real_service_at_boot.sh  tool_bootstrap.py
