[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roastpi"
version = "0.0.0"
description = "Raspberry Pi service for the Popper Connector coffee roaster"
requires-python = ">=3.9"
dependencies = [
    "smbus2>=0.6,<1",
    "spidev>=3.8,<4",
    "websockets>=12,<16",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
